--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,3 +30,7 @@ steps:
     ArtifactName: 'drop'
     publishLocation: 'Container'
 
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(System.DefaultWorkingDirectory)/CSAO/Scripts/'
+    ArtifactName: 'CICDPipelineScripts'
